# JuegoProyectoFinal

./: CMakeLists.txt  README.md
SouthParkOlimpicos/: Bala.h  FaseLanzamiento.h  FaseRunner.h  Fondo.cpp  Fondo.h  GestionJuego.cpp  GestionJuego.h  Objeto.h  Obstaculo.h  Personaje.cpp  Personaje.h  Recursos.qrc  SouthParkOlimpicos.pro  Villano.h  main.cpp
